--- a/src/views/home.html.twig
+++ b/src/views/home.html.twig
@@ -1,26 +1,12 @@
-<!doctype html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>Hotel Gestion</title>
-    <link rel='stylesheet' type='text/css' media='screen' href='/public/css/style.css'>
-</head>
-<body>
+{% extends 'layout/home-layout.html.twig' %}
 
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-md-12">
-            <div class="card">
-                <h1 class="display-4">Bienvenue à notre Hôtel</h1>
-                <p class="lead">Réservez votre chambre en toute simplicité et profitez d'un séjour inoubliable.</p>
-                <a href="chambre" class="btn btn-primary btn-lg">Réserver maintenant</a>
-            </div>
-        </div>
-    </div>
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+{% block app %}
+  <div class="text-center space-y-6">
+    <h1 class="text-4xl font-extrabold text-blue-700 drop-shadow-md">
+      Welcome to <span class="text-blue-500">Vials Template</span>
+    </h1>
+    <p class="text-lg text-gray-700">
+      This is my <span class="font-semibold text-blue-400 font-extrabold drop-shadow-md">MVC Template</span> — made with ❤️ and Tailwind.
+    </p>
+  </div>
+{% endblock %}
